k8s/opensearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-deployment
  labels:
    app: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.9.0
          ports:
            - containerPort: 9200
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-service
spec:
  type: ClusterIP
  selector:
    app: opensearch
  ports:
    - port: 9200
      targetPort: 9200
